practic/sprint-k8s-backups/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app-v1
spec:
  replicas: 3                         # теперь 3 реплики
  strategy:                           # стратегия обновления 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0               # не теряем доступные Pod'ы при обновлении
      maxSurge: 1                     # создаём максимум 1 дополнительный Pod, чтобы обеспечить максимум 4 экземпляра
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      topologySpreadConstraints:      # распределяем Pod'ы по зонаям, чтобы не было ситуации, когда все Pod'ы в одной зоне
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: app-v1

      containers:
      - name: hello-v1
        image: node:24.11.1-trixie
        command:
        - node
        args:
        - /app.js
        ports:
        - containerPort: 3000

        startupProbe:                 # ДОБАВЛЕНО
          httpGet:
            path: /healthz
            port: 3000
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 15         # максимум 75 сек на запуск

        readinessProbe:                # определяет, готов ли Pod принимать трафик
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2

        livenessProbe:                 # перезапускает зависший контейнер
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 70
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        volumeMounts:
        - name: app-volume
          mountPath: /app.js
          subPath: app.js

        resources:
          requests:                 # ограничение по ресурсами
            memory: "128Mi"
            cpu: "200m"

          limits:                   # ограничение по ресурсами
            memory: "128Mi"
            cpu: "200m"

      volumes:
      - name: app-volume
        configMap:
          name: app-code

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-v1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservice
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: app-service
      port:
        number: 3000
